# Pear-EBI

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  LICENSE.txt  MANIFEST.in  PCA_Embedding.csv  PEAR.py  README.md  gendoc.py  goldman_logo.pngZone.Identifier  main.py  mkdocs.yml  mkgendocs.yml  pear.py  pre-commit-config.yaml  print_page.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  tree_emb_parser.py  tree_set.py
Benchmark_tests/: TreeDist.R  TreeSpace.R  snakefile_RandomTrees
benchmark_tests/: Pear.py  README  RandomTreeGenerator.R  snakefile  snakefile_Pear  snakefile_TreeDist  snakefile_TreeSpace
calculate_distances/: hashrf.py
calculate_distances/HashRF/: AUTHORS  Makefile  Makefile.am  Makefile.in  Random.cpp  config.h  config.h.in  config.hh  config.hh.in  config.status  configure.lineno  hash.cc  hash.hh  hashfunc.cc  label-map.cc  newick.h
docs/: index.md
docs/pear_ebi/: tree_emb_parser.md  tree_set.md
embeddings/: PCA_e.py  tSNE_e.py
embeddings/graph/: graph.py  graph2.py
examples_tree_sets/: Compara.ipynb  DistMat_Maple.csv  PCA_Embedding.csv  Pear_EX.ipynb  README  pear.toml
examples_tree_sets/.ipynb_checkpoints/: Compara-checkpoint.ipynb  Pear_EX-checkpoint.ipynb
examples_tree_sets/MAPLE_res/: IQtreeStartingTree_LK  ParsimonyRAxMLStartingTree_GTRmodel_LK  RAxMLNGStartingTree_LK  UshERStartingTree_LK  correct_mod_tree.tree_clean  correct_tree.tree_clean  sim_MAPLE_intermediateLKs.txt_clean  sim_MAPLE_intermediateTrees.tree_clean  sim_input_UshER_GTR_intermediateLKs.txt_clean  sim_input_fast_IQtree_GTR_intermediateLKs.txt_clean  sim_input_fast_RAxML_NG_GTR_intermediateLKs.txt_clean  sim_input_fast_parsimony_RAxML_GTR_intermediateLKs.txt_clean  sim_input_fast_parsimony_RAxML_JC_intermediateLKs.txt_clean  sim_input_fast_parsimony_RAxML_UNREST_intermediateLKs.txt_clean  sim_input_medium_IQtree_GTR_intermediateLKs.txt_clean  sim_input_slow_IQtree_GTR_intermediateLKs.txt_clean
examples_tree_sets/bootstrap_mammals/: bestTree_10409  bestTree_1049  bestTree_105  bestTree_10711  bestTree_10727  bestTree_109  bestTree_1113  bestTree_11289  bestTree_1204  bestTree_2101  bestTree_229  bestTree_2529  bestTree_2731  bestTree_275  bestTree_281  bestTree_3066  bestTree_335  bestTree_4544  bestTree_4852  bestTree_4854  bestTree_5092  bestTree_516  bestTree_5261  bestTree_5277  bestTree_5301  bestTree_53705  bestTree_53886  bestTree_53958  bestTree_5402  bestTree_5418  bestTree_5764  bestTree_5844  bestTree_5854  bestTree_694  (+104 more)
interactive_mode/: interactive.py
pear_ebi/: __init__.py  __main__.py  tree_emb_parser.html  tree_emb_parser.py  tree_set.html  tree_set.py
pear_ebi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pear_ebi/calculate_distances/HashRF/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  Random.cpp  aclocal.m4  config.h  config.h.in  config.hh  config.hh.in  config.status  configure  configure.ac  configure.lineno  hash.cc  hash.hh  hashfunc.cc  hashfunc.hh  hashrf.cc  label-map.cc  label-map.hh  newick.c  newick.h
pear_ebi/calculate_distances/HashRF/.deps/: Random.Po  bitset.Po  hash.Po  hashfunc.Po  hashrf.Po  label-map.Po  mersenne.Po  newick.Po
pear_ebi/calculate_distances/HashRF/RandomLib/: ExactExponential.hpp  ExactPower.hpp  ExponentialDistribution.hpp  ExponentialProb.hpp  LeadingZeros.hpp  NormalDistribution.hpp  Random.hpp  RandomAlgorithm.hpp  RandomCanonical.hpp  RandomEngine.hpp  RandomMixer.hpp  RandomNumber.hpp  RandomPower2.hpp  RandomSeed.hpp  RandomSelect.hpp  RandomType.hpp
pear_ebi/calculate_distances/HashRF/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pear_ebi/calculate_distances/HashRF/examples/: 150-taxa-100-trees.tre  150-taxa-1000-trees.tre  567-taxa-10-trees.tre  567-taxa-100-trees.tre  README
pear_ebi/calculate_distances/HashRF/tclap/: Arg.h  ArgException.h  CmdLineInterface.h  CmdLineOutput.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  Makefile.am  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  config.h
pear_ebi/calculate_distances/tqDist/: ._CMakeLists.txt  ._COPYING  ._COPYING.LESSER  ._README  ._tqDist  CMakeCache.txt  CMakeLists.txt  COPYING  COPYING.LESSER  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  install_manifest.txt
pear_ebi/calculate_distances/tqDist/Testing/Temporary/: CTestCostData.txt
pear_ebi/calculate_distances/tqDist/tqDist/: ._pairs_quartet_distance.cpp  ._quartet_dist.cpp  ._triplet_dist.cpp  AbstractDistanceCalculator.cpp  AbstractDistanceCalculator.h  CMakeLists.txt  CTestTestfile.cmake  HDT.cpp  HDTCountingCCToC.cpp  HDTCountingCTransform.cpp  HDTCountingG.cpp  HDTCountingIGToC.cpp  HDTCountingLeaf.cpp  HDTFactory.cpp  HDTListUtils.cpp  Makefile  Makevars  NewickParser.cpp  QuartetDistanceCalculator.cpp  QuartetDistanceCalculator.h  RootedTree.cpp  RootedTreeFactory.cpp  TripletDistanceCalculator.cpp  TripletDistanceCalculator.h  all_pairs_quartet_distance.cpp  all_pairs_triplet_distance.cpp  cmake_install.cmake  counting_linked_list.h  hdt.h  hdt_factory.h  int_stuff.cpp  int_stuff.h  memory_allocator.h  pairs_quartet_distance.cpp  pairs_triplet_distance.cpp  pyQuartetDist.cpp  pyTripletDist.cpp  python_test.py  quartet_dist.cpp  rQuartetDist.cpp  (+14 more)
pear_ebi/calculate_distances/tqDist/trees/: .Rhistory  newline1.new  newline2.new  pairs1.new  pairs2.new  quartet2.new  test_tree1.new  test_tree2.new  test_tree3.new  test_tree4.new  test_tree5.new  test_tree6.new  tree1.new  tree2.new  tree_ac-b.new  tree_ba-c.new  tree_cb-a.new  unresolved1.new  unresolved2.new  unresolved3.new  unresolved4.new  unresolved5.new
search/: search_index.json
set_collection/: set_collection.py
site/: 404.html  index.html  print_page.html  sitemap.xml
test/: PCA_Embedding.csv  beast_run1_distance_matrix.csv  test.py
toml_examples/: hashrf_pca2d_plot_set_id.toml  pear.toml
tree_set/: tree_set.py
(+74 files in other folders)
